# cryptex

./: .gitignore  README.md  pyproject.toml
src/cryptex/: main.py
src/cryptex/archive/: 047.md.crypt  Hello.crypt  Test.crypt
src/cryptex/origin/: 047.md.txt  Test.txt
